--- a/etablissement/src/main/resources/application.properties
+++ b/etablissement/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/etablissement
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+#jpa
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#context path
+server.servlet.context-path=/etablissement
+
 
