--- a/etablissementAngular/package.json
+++ b/etablissementAngular/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.6",
     "tslib": "^2.0.0",
