--- a/etablissementAngular/package.json
+++ b/etablissementAngular/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "jspdf": "^2.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.6",
