--- a/etablissement/src/main/resources/application.properties
+++ b/etablissement/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #jpa
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 #context path
 server.servlet.context-path=/etablissement
